--- a/.github/workflows/main_foodclopediang.yml
+++ b/.github/workflows/main_foodclopediang.yml
@@ -23,13 +23,13 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          cd src/backend
+          cd backend
           npm install
           npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip cd/backend && zip ../../release.zip . -r
+        run: cd backend && zip ../release.zip . -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
